--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
-    color: #333;
+    color: #88f680;
 }
 
 .container {
@@ -78,27 +78,26 @@ header a:hover {
 }
 
 .section-content {
-    background: rgba(228, 5, 5, 0.504); /* 半透明黑色背景 */
+    background: rgba(0, 0, 0, 0.5); /* 半透明黑色背景 */
     padding: 20px;
     border-radius: 8px;
 }
 
 #about {
-    background-image: url('D:\Desktop\3.17晚课作业\images\1.png'); /* 替换为你的背景图片 */
+    background-image: url('\muqiyanweb\images\1.png'); /* 替换为你的背景图片 */
 }
 
 #education {
-    background-image: url('D:\Desktop\3.17晚课作业\images\2.png'); /* 替换为你的背景图片 */
+    background-image: url('\muqiyanweb\images\2.png'); /* 替换为你的背景图片 */
 }
 
 #awards {
-    background-image: url('D:\Desktop\3.17晚课作业\images\3.png'); /* 替换为你的背景图片 */
+    background-image: url('\muqiyanweb\images\3.png'); /* 替换为你的背景图片 */
 }
 
 #contact {
-    background-image: url('contact-bg.jpg'); /* 替换为你的背景图片 */
+    background-image: url('\muqiyanweb\images\1.png'); /* 替换为你的背景图片 */
 }
-
 .section h2 {
     margin-bottom: 20px;
 }
@@ -119,7 +118,7 @@ header a:hover {
 
 /* 页脚样式 */
 footer {
-    background: #333;
+    background: #6eeea1;
     color: #fff;
     text-align: center;
     padding: 10px;
